--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     twitter:         JuniorDevBear
-    github:          Choi-su-jung
+    github:          choi-su-jung
     email:           tnwjd839200@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
